--- a/Sol_Demo/Sol_Demo/Views/Demo/Index.cshtml
+++ b/Sol_Demo/Sol_Demo/Views/Demo/Index.cshtml
@@ -5,27 +5,27 @@
 
 <h1>Index</h1>
 
-@*@{ 
+@*@{
 
-    var listData = new List<String>();
-    listData.Add("C++");
-    listData.Add("Csharp");
-    listData.Add("Java");
-    listData.Add("Javascript");
-    listData.Add("Typescript");
-    listData.Add("Python");
-    listData.Add("Objective-C");
-    listData.Add("Swift");
+        var listData = new List<String>();
+        listData.Add("C++");
+        listData.Add("Csharp");
+        listData.Add("Java");
+        listData.Add("Javascript");
+        listData.Add("Typescript");
+        listData.Add("Python");
+        listData.Add("Objective-C");
+        listData.Add("Swift");
 
-}*@
+    }*@
 
 <form id="frmMain">
     <div class="container">
         <div class="row">
             <div class="col-6">
-                <jQuery-Listbox item-source="Model" 
-                                on-selected-index="2" 
-                                on-getitem-button-id="btnSelected" 
+                <jQuery-Listbox item-source="Model"
+                                on-selected-index="2"
+                                on-getitem-button-id="btnSelected"
                                 displayitem-id="h2DisplayItem"></jQuery-Listbox>
             </div>
             <div class="col-6">
@@ -36,7 +36,6 @@
             <div class="col-12">
                 <hr />
                 <button id="btnSelected" class="btn btn-danger" onclick="onSelectedItem(); return false;">Get Selected Value</button>
-                
             </div>
         </div>
     </div>
@@ -44,18 +43,18 @@
 
 @section Scripts {
 
-    @{await Html.RenderPartialAsync("~/Views/Shared/_JqueryListBoxJavascriptPartialView.cshtml");}
+    @{
+        await Html.RenderPartialAsync("~/Views/Shared/_JqueryListBoxJavascriptPartialView.cshtml");
+    }
 
     <script type="text/javascript">
 
-     
         function onSelectedItem() {
             $("#frmMain").attr("method", "post");
             $("#frmMain").attr("action", '@Url.Action("OnItemSelected","Demo")');
             $("#frmMain").submit();
-          
+
         }
-        
     </script>
 
 }
